--- a/pages/react.html
+++ b/pages/react.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 4 - React</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
     <header>
         <h1>React — Criando interfaces com componentes</h1>
     </header>
 
-   <nav>
-  <a href="index.html">Início</a> 
-  <a href="html.html">HTML</a>
-  <a href="css.html">CSS</a>
-  <a href="js.html">JavaScript</a>
-  <a href="react.html">React</a>
-  <a href="node.html">Node.js</a>
-</nav>
+    <nav>
+        <a href="/index.html">Início</a>
+        <a href="/pages/html.html">HTML</a>
+        <a href="/pages/css.html">CSS</a>
+        <a href="/pages/js.html">JavaScript</a>
+        <a href="/pages/react.html">React</a>
+        <a href="/pages/node.html">Node.js</a>
+    </nav>
 
     <main>
         <p>React é uma biblioteca JavaScript criada pelo Facebook para construir interfaces.</p>
@@ -36,7 +38,8 @@ function Ola() {
         <hr>
 
         <h2>Props (Propriedades)</h2>
-        <p>As Props são argumentos que você passa para os componentes. Elas permitem que um componente seja **reutilizável** com dados diferentes.</p>
+        <p>As Props são argumentos que você passa para os componentes. Elas permitem que um componente seja
+            **reutilizável** com dados diferentes.</p>
 
         <h3>Exemplo de Componente com Props:</h3>
         <pre>
@@ -52,7 +55,7 @@ function BoasVindas(props) {
 &lt;BoasVindas nome="Professor" /&gt;
 */
         </pre>
-        
+
         <h3>Conceito:</h3>
         <div class="exemplo-react">
             <p>A Prop **nome** faz com que o mesmo componente exiba:</p>
@@ -61,4 +64,5 @@ function BoasVindas(props) {
         </div>
     </main>
 </body>
+
 </html>
