--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Curso de Desenvolvimento de Software</title>
-<link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
@@ -17,12 +17,12 @@
   </header>
 
   <nav>
-    <a href="/index.html">Início</a>
-    <a href="/pages/html.html">HTML</a>
-    <a href="/pages/css.html">CSS</a>
-    <a href="/pages/js.html">JavaScript</a>
-    <a href="/pages/react.html">React</a>
-    <a href="/pages/node.html">Node.js</a>
+    <a href="index.html">Início</a>
+    <a href="pages/html.html">HTML</a>
+    <a href="pages/css.html">CSS</a>
+    <a href="pages/js.html">JavaScript</a>
+    <a href="pages/react.html">React</a>
+    <a href="pages/node.html">Node.js</a>
   </nav>
 
   <main>
