--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
   </header>
 
   <nav>
-    <a href="index.html">Início</a>
-    <a href="pages/html.html">HTML</a>
-    <a href="pages/css.html">CSS</a>
-    <a href="pages/js.html">JavaScript</a>
-    <a href="pages/react.html">React</a>
-    <a href="pages/node.html">Node.js</a>
+        <a href="/index.html">Início</a>
+        <a href="/pages/html.html">HTML</a>
+        <a href="/pages/css.html">CSS</a>
+        <a href="/pages/js.html">JavaScript</a>
+        <a href="/pages/react.html">React</a>
+        <a href="/pages/node.html">Node.js</a>
   </nav>
-
   <main>
     <h2>Introdução ao Conteúdo</h2>
     <p>O desenvolvimento web moderno é dividido em três pilares principais: **Estrutura**, **Estilo** e
