--- a/pages/html.html
+++ b/pages/html.html
@@ -13,16 +13,14 @@
     <header>
         <h1>HTML — Estruturando Páginas</h1>
     </header>
-
     <nav>
-        <a href="index.html">Início</a>
-        <a href="pages/html.html">HTML</a>
-        <a href="pages/css.html">CSS</a>
-        <a href="pages/js.html">JavaScript</a>
-        <a href="pages/react.html">React</a>
-        <a href="pages/node.html">Node.js</a>
+            <a href="/index.html">Início</a>
+            <a href="/pages/html.html">HTML</a>
+            <a href="/pages/css.html">CSS</a>
+            <a href="/pages/js.html">JavaScript</a>
+            <a href="/pages/react.html">React</a>
+            <a href="/pages/node.html">Node.js</a>
     </nav>
-
     <main>
         <p>O HTML é a base de toda página web. Ele define o conteúdo e a estrutura.</p>
 
