--- a/pages/react.html
+++ b/pages/react.html
@@ -14,12 +14,12 @@
     </header>
 
     <nav>
-        <a href="index.html">Início</a>
-        <a href="pages/html.html">HTML</a>
-        <a href="pages/css.html">CSS</a>
-        <a href="pages/js.html">JavaScript</a>
-        <a href="pages/react.html">React</a>
-        <a href="pages/node.html">Node.js</a>
+            <a href="/index.html">Início</a>
+            <a href="/pages/html.html">HTML</a>
+            <a href="/pages/css.html">CSS</a>
+            <a href="/pages/js.html">JavaScript</a>
+            <a href="/pages/react.html">React</a>
+            <a href="/pages/node.html">Node.js</a>
     </nav>
     <main>
         <p>React é uma biblioteca JavaScript criada pelo Facebook para construir interfaces.</p>
