--- a/pages/react.html
+++ b/pages/react.html
@@ -13,13 +13,13 @@
         <h1>React — Criando interfaces com componentes</h1>
     </header>
 
-    <nav>
-            <a href="/index.html">Início</a>
-            <a href="/pages/html.html">HTML</a>
-            <a href="/pages/css.html">CSS</a>
-            <a href="/pages/js.html">JavaScript</a>
-            <a href="/pages/react.html">React</a>
-            <a href="/pages/node.html">Node.js</a>
+      <nav>
+            <a href="index.html">Início</a>
+            <a href="html.html">HTML</a>
+            <a href="css.html">CSS</a>
+            <a href="js.html">JavaScript</a>
+            <a href="react.html">React</a>
+            <a href="node.html">Node.js</a>
     </nav>
     <main>
         <p>React é uma biblioteca JavaScript criada pelo Facebook para construir interfaces.</p>
