--- a/pages/html.html
+++ b/pages/html.html
@@ -14,7 +14,7 @@
         <h1>HTML — Estruturando Páginas</h1>
     </header>
      <nav>
-            <a href="index.html">Início</a>
+            <a href="../index.html">Início</a>
             <a href="html.html">HTML</a>
             <a href="css.html">CSS</a>
             <a href="js.html">JavaScript</a>
