--- a/pages/react.html
+++ b/pages/react.html
@@ -14,7 +14,7 @@
     </header>
 
       <nav>
-            <a href="index.html">Início</a>
+            <a href="../index.html">Início</a>
             <a href="html.html">HTML</a>
             <a href="css.html">CSS</a>
             <a href="js.html">JavaScript</a>
